--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 		</div>
 	</div>
 </header>
+<div class="clear"></div>
 <!--end-header-->
 <!--main-->
 <div class="main">
@@ -123,7 +124,7 @@
 			<div class="col-md-4  col-sm-4">
 				<h6>Полезное</h6>
 				<div class="row">
-					<div class="col-md-6 col-xs-6">
+					<div class="col-md-6">
 						<ul>
 							<li><a href="#">Документация</a></li>
 							<li><a href="#">Запчасти</a></li>
@@ -133,7 +134,7 @@
 							<li><a href="#">Продажа</a></li>
 						</ul>
 					</div>
-					<div class="col-md-6 col-xs-6">
+					<div class="col-md-6">
 						<ul>
 							<li><a href="#">Сервис</a></li>
 							<li><a href="#">Люди</a></li>
