--- a/cabinet.html
+++ b/cabinet.html
@@ -28,129 +28,228 @@
 		<!-- END OF SCRIPT -->
 	</head>
 <body>
-<div class="wrapper">
-<!--header-->
-<header class="header">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-12">
-				<a href="#" class="head_left">
-				<i class="fa fa-envelope-o" aria-hidden="true"></i> 
-				Обратная связь</a>
-			</div>
-			<div class="col-md-9 col-sm-9 col-xs-12">
-				<div class="head_info">
-					<div class="head_right dropdown">
-						<button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span>USER/Вход</button>
-						<div class="dropdown-menu" aria-labelledby="dLabel" >
-							<ul>
-								<li><a href="#"><i class="fa fa-wrench" aria-hidden="true"></i>
-								Гараж</a></li>
-								<li><a href="#"><i class="fa fa-file-text-o" aria-hidden="true"></i>
-								Мои заявки</a></li>
-								<li><a href="#"><i class="fa fa-gavel" aria-hidden="true"></i>
-								Мои объявления</a></li>
-								<li><a href="#"><i class="fa fa-database" aria-hidden="true"></i>
-								Платежи</a></li>
-								<li><a href="#"><i class="fa fa-star" aria-hidden="true"></i>
-								Избранное</a></li>
-								<li><a href="#"><i class="fa fa-cog" aria-hidden="true"></i>
-								Настройки</a></li>
-								<li><a href="#"><i class="fa fa-sign-out" aria-hidden="true"></i>
-								Выход</a></li>
-							</ul>
-						</div>
-					</div>	
-					<div class="button_group">
-						<a href="#modal_box" class="fancybox">
-							<i class="fa fa-pencil" aria-hidden="true"></i>
-							Создать заявку
-						</a>
-						<a href="#modal_box" class="fancybox red">
-							<i class="fa fa-file-text-o" aria-hidden="true"></i>
-							Добавить объявление
-						</a>
-					</div>
-				</div>	
-			</div>
-		</div>
-	</div>
-</header>
-<div class="clear"></div>
-<!--end-header-->
-<!--main-->
-<div class="main main_page">
-	<div class="bnr"><img src="img/cabinet_bg.jpg" alt=""></div>
-	<div class="inner_page_wrap">
-		<aside class="sidebar">
-			1
-		</aside>
-		<div class="content">
+	<div class="wrapper">
+		<!--header-->
+		<header class="header">
 			<div class="container">
-				123
-			</div>
-		</div>
-	</div>
-	
-</div>
-<!--end-main-->
-<!--footer-->
-<footer class="footer">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4  col-sm-4">
-				<h6>информация</h6>
-				<ul>
-					<li><a href="#">О проекте</a></li>
-					<li><a href="#">Помощь</a></li>
-					<li><a href="#">Пользовательское соглашение</a></li>
-					<li><a href="#">Контакты</a></li>
-					<li><a href="#">Условия размещения</a></li>
-					<li><a href="#">Условия подписки</a></li>
-				</ul>
-			</div>
-			<div class="col-md-4  col-sm-4">
-				<h6>Полезное</h6>
 				<div class="row">
-					<div class="col-md-6">
-						<ul>
-							<li><a href="#">Документация</a></li>
-							<li><a href="#">Запчасти</a></li>
-							<li><a href="#">Новости</a></li>
-							<li><a href="#">Каталоги</a></li>
-							<li><a href="#">Аренда</a></li>
-							<li><a href="#">Продажа</a></li>
-						</ul>
+					<div class="col-md-3 col-sm-3 col-xs-12">
+						<a href="#" class="head_left">
+						<i class="fa fa-envelope-o" aria-hidden="true"></i> 
+						Обратная связь</a>
 					</div>
-					<div class="col-md-6">
-						<ul>
-							<li><a href="#">Сервис</a></li>
-							<li><a href="#">Люди</a></li>
-							<li><a href="#">Заявки</a></li>
-						</ul>
+					<div class="col-md-9 col-sm-9 col-xs-12">
+						<div class="head_info">
+							<div class="head_right dropdown">
+								<button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span>USER/Вход</button>
+								<div class="dropdown-menu" aria-labelledby="dLabel" >
+									<ul>
+										<li><a href="#"><i class="fa fa-wrench" aria-hidden="true"></i>
+										Гараж</a></li>
+										<li><a href="#"><i class="fa fa-file-text-o" aria-hidden="true"></i>
+										Мои заявки</a></li>
+										<li><a href="#"><i class="fa fa-gavel" aria-hidden="true"></i>
+										Мои объявления</a></li>
+										<li><a href="#"><i class="fa fa-database" aria-hidden="true"></i>
+										Платежи</a></li>
+										<li><a href="#"><i class="fa fa-star" aria-hidden="true"></i>
+										Избранное</a></li>
+										<li><a href="#"><i class="fa fa-cog" aria-hidden="true"></i>
+										Настройки</a></li>
+										<li><a href="#"><i class="fa fa-sign-out" aria-hidden="true"></i>
+										Выход</a></li>
+									</ul>
+								</div>
+							</div>	
+							<div class="button_group">
+								<a href="#modal_box" class="fancybox">
+									<i class="fa fa-pencil" aria-hidden="true"></i>
+									Создать заявку
+								</a>
+								<a href="#modal_box" class="fancybox red">
+									<i class="fa fa-file-text-o" aria-hidden="true"></i>
+									Добавить объявление
+								</a>
+							</div>
+						</div>	
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4  col-sm-4">
-				<h6>Важное</h6>
-				<ul>
-					<li><a href="#">О проекте</a></li>
-					<li><a href="#">Помощь</a></li>
-					<li><a href="#">Пользовательское соглашение</a></li>
-					<li><a href="#">Контакты</a></li>
-					<li><a href="#">Условия размещения</a></li>
-					<li><a href="#">Условия подписки</a></li>
-				</ul>
+		</header>
+		<div class="clear"></div>
+		<!--end-header-->
+
+		<!--banner-->
+		<div class="bnr" style="background-image: url('img/cabinet_bg.jpg')"></div>
+		<!--end-banner-->
+
+		<!--main-->
+		<div class="main">
+			<aside class="sidebar">
+				<div class="sidebar-head">
+					<div class="sidebar-navbar">
+						<i class="fa fa-bars" aria-hidden="true"></i>
+					</div>
+				</div>
+				<div class="sidebar-nav">
+					<ul>
+						<li><a href=""><div class="nav-title">Заказы</div><div class="sidebar-icon"><i class="fa fa-check-square-o" aria-hidden="true"></i></div></a></li>
+						<li><a href=""><div class="nav-title">Корзина</div><div class="sidebar-icon"><i class="fa fa-shopping-cart" aria-hidden="true"></i></div></a></li>
+						<li><a href=""><div class="nav-title">Баланс</div><div class="sidebar-icon"><i class="fa fa-rub" aria-hidden="true"></i></div></a></li>
+						<li><a href=""><div class="nav-title">Блокнот</div><div class="sidebar-icon"><i class="fa fa-file-text-o" aria-hidden="true"></i></div></a></li>
+						<li><a href=""><div class="nav-title">Отчеты</div><div class="sidebar-icon"><i class="fa fa-pie-chart" aria-hidden="true"></i></div></a></li>
+						<li><a href=""><div class="nav-title">Гараж</div><div class="sidebar-icon"><i class="fa fa-wrench" aria-hidden="true"></i></div></a></li>
+						<li><a href=""><div class="nav-title">Запросы</div><div class="sidebar-icon"><i class="fa fa-shopping-cart" aria-hidden="true"></i></div></a></li>
+						<li><a href=""><div class="nav-title">Друзья</div><div class="sidebar-icon"><i class="fa fa-users" aria-hidden="true"></i></div></a></li>
+						<li><a href=""><div class="nav-title">Мои автоточки</div><div class="sidebar-icon"><i class="fa fa-road" aria-hidden="true"></i></div></a></li>
+						<li><a href=""><div class="nav-title">Статистика</div><div class="sidebar-icon"><i class="fa fa-signal" aria-hidden="true"></i></div></a></li>
+						<li><a href=""><div class="nav-title">Настройки</div><div class="sidebar-icon"><i class="fa fa-cog" aria-hidden="true"></i></div></a></li>
+					</ul>
+				</div>
+			</aside>
+			<div class="container">
+				<div class="breadcrumbs">
+					<ul>
+						<li><a href="">Главная</a></li>
+						<li><a href="">Объявления об аренде</a></li>
+						<li>Гусенечный экскаватор</li>
+					</ul>
+				</div>
+				<div class="content">
+					<h2>Запашный Константин Николаевич</h2>
+					<div class="advertisement">
+						<div class="box">
+							<div class="box-head">
+								<a href="">
+									<div class="box-icon">
+										<i class="fa fa-car" aria-hidden="true"></i>
+									</div>
+									Гараж
+								</a>
+							</div>
+							<div class="box-body">
+								<p>Сохраните вашу технику для проведения быстрых действий: сдать в аренду или продать, найти запчасть или сервисного специалиста.</p>
+							</div>
+							<div class="box-footer">
+								<p><strong>Всего техники: 0</strong></p>
+								<p><a href=""><i class="fa fa-plus" aria-hidden="true"></i>Добавить технику</a></p>
+							</div>
+						</div>
+						<div class="box">
+							<div class="box-head">
+								<a href="">
+									<div class="box-icon">
+										<i class="fa fa-key" aria-hidden="true"></i>
+									</div>
+									Аренда
+								</a>
+							</div>
+							<div class="box-body">
+								<p>Добавляйте объявления об аренде.</p>
+							</div>
+							<div class="box-footer">
+								<p><strong>Всего объявлений: 0</strong></p>
+								<p><a href=""><i class="fa fa-plus" aria-hidden="true"></i>Добавить объявление</a></p>
+							</div>
+						</div>
+						<div class="box">
+							<div class="box-head">
+								<a href="">
+									<div class="box-icon">
+										<i class="fa fa-gavel" aria-hidden="true"></i>
+									</div>
+									Продажа
+								</a>
+							</div>
+							<div class="box-body">
+								<p>Добавляйте объявления о продаже.</p>
+							</div>
+							<div class="box-footer">
+								<p><strong>Всего объявлений: 0</strong></p>
+								<p><a href=""><i class="fa fa-plus" aria-hidden="true"></i>Добавить объявление</a></p>
+							</div>
+						</div>
+						<div class="box">
+							<div class="box-head">
+								<a href="">
+									<div class="box-icon">
+										<i class="fa fa-comments-o" aria-hidden="true"></i>
+									</div>
+									Сообщения
+								</a>
+							</div>
+							<div class="box-body">
+								<p>Информация о партнерах,</p>
+								<p>Переписка с клиентами.</p>
+							</div>
+							<div class="box-footer">
+								<p><strong>Всего техники: 0</strong></p>
+								<p><a href=""><i class="fa fa-plus" aria-hidden="true"></i>Добавить технику</a></p>
+							</div>
+						</div>
+						<div class="box">
+							<div class="box-head">
+								<a href="">
+									<div class="box-icon">
+										<i class="fa fa-database" aria-hidden="true"></i>
+									</div>
+									Баланс
+								</a>
+							</div>
+							<div class="box-body">
+								<p>Состояние счета и способы его пополнения.</p>
+							</div>
+							<div class="box-footer">
+								<p><strong>Всего объявлений: 0</strong></p>
+								<p><a href=""><i class="fa fa-plus" aria-hidden="true"></i>Добавить объявление</a></p>
+							</div>
+						</div>
+						<div class="box">
+							<div class="box-head">
+								<a href="">
+									<div class="box-icon">
+										<i class="fa fa-file-text-o" aria-hidden="true"></i>
+									</div>
+									заявки
+								</a>
+							</div>
+							<div class="box-body">
+								<p>Просматривайте поступающие заявки по вашим настройкам. Создавайте заявки на требуемые работы, услуги, материалы.</p>
+							</div>
+							<div class="box-footer">
+								<p><strong>Всего объявлений: 0</strong></p>
+								<p><a href=""><i class="fa fa-plus" aria-hidden="true"></i>Добавить объявление</a></p>
+							</div>
+						</div>
+						<div class="box">
+							<div class="box-head">
+								<a href="">
+									<div class="box-icon">
+										<i class="fa fa-cogs" aria-hidden="true"></i>
+									</div>
+									Настройки
+								</a>
+							</div>
+							<div class="box-body">
+								<p>Настройте ваш аккаунт на EXMM и получайте только то, что вам необходимо.</p>
+								<p></p>
+							</div>
+							<div class="box-footer">
+								<p><a href=""><i class="fa fa-pencil" aria-hidden="true"></i>Персональные данные</a></p>
+								<p><a href=""><i class="fa fa-pencil" aria-hidden="true"></i>Контактная информация</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+		<!--end-main-->
+
+		<div class="modal_window" id="modal_box">
+			<h5>Some text</h5>
+		</div>
+
 	</div>
-</footer>
-<!--end-footer-->
 
-<div class="modal_window" id="modal_box">
-	<h5>Some text</h5>
-</div>
-
-</div>
 </body>
 </html>
