--- a/teh.html
+++ b/teh.html
@@ -218,139 +218,145 @@
 							</div>
 						</div>	
 					</div>
-					<div class="product_wrap">
-						<h5>Экскаваторы гусеничные</h5>
-						<div class="product_block row">
-							<div class="product_item col-md-6">
-								<article>
-									<img src="img/garage_img1.jpg" alt="">
-									<section>
-										<h6>Гусеничный экскаватор Wacker Neuson 1404</h6>
-										<p>VIN: HITACHI ZX330LC-5G <br> 2008 год</p>
-										<small class="red">В аренде</small>
-									</section>
-								</article>	
+					<div class="capabilities row">
+						<div class="col-md-8">
+							<h3>
+								Возможности
+								<nav class="pull-right">
+									<a href="#"><i class="fa fa-list" aria-hidden="true"></i></a>
+									<a href="#" class="active"><i class="fa fa-th-large" aria-hidden="true"></i></a>
+								</nav>
+							</h3>
+							<div class="capabilities_inner">
+								<div class="row">
+									<div class="col-md-6">
+										<div class="capabilities_block">
+											<h6>Аренда</h6>
+											<div class="capabilities_item">
+												<figure>
+													<a href="#"><i class="fa fa-calendar-check-o" aria-hidden="true"></i></a>
+													<figcaption>
+														<a href="#">Настроить прайс-лист</a>
+													</figcaption>
+												</figure>
+												<figure>
+													<a href="#"><i class="fa fa-cogs" aria-hidden="true"></i></a>
+													<figcaption>
+														<a href="#">Сдать в аренду</a>
+													</figcaption>
+												</figure>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6">
+										<div class="capabilities_block grey">
+											<h6>СЕрвис</h6>
+											<div class="capabilities_item">
+												<figure>
+													<a href="#"><i class="fa fa-male" aria-hidden="true"></i></a>
+													<figcaption>
+														<a href="#">Вызвать диагноста</a>
+													</figcaption>
+												</figure>
+												<figure>
+													<a href="#"><i class="fa fa-file-text-o" aria-hidden="true"></i></a>
+													<figcaption>
+														<a href="#">Заявка на ремонт</a>
+													</figcaption>
+												</figure>
+												<figure>
+													<a href="#"><i class="fa fa-file-text" aria-hidden="true"></i></a>
+													<figcaption>
+														<a href="#">Заявка на ТО</a>
+													</figcaption>
+												</figure>
+											</div>
+										</div>
+									</div>
+								</div>	
+								<div class="row">
+									<div class="col-md-6">
+										<div class="capabilities_block grey">
+											<h6>Запчасти</h6>
+											<div class="capabilities_item">
+												<figure>
+													<a href="#"><i class="fa fa-list" aria-hidden="true"></i></a>
+													<figcaption>
+														<a href="#">Каталог</a>
+													</figcaption>
+												</figure>
+												<figure>
+													<a href="#"><i class="fa fa-steam-square" aria-hidden="true"></i></a>
+													<figcaption>
+														<a href="#">Купить запчасть</a>
+													</figcaption>
+												</figure>
+												<figure class="capabilities_xl">
+													<a href="#"><i class="fa fa-steam" aria-hidden="true"></i></a>
+													<figcaption>
+														<a href="#">Купить навесное оборудование</a>
+													</figcaption>
+												</figure>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6">
+										<div class="capabilities_block lightblue">
+											<h6>Другое</h6>
+											<div class="capabilities_item">
+												<figure>
+													<a href="#"><i class="fa fa-gavel" aria-hidden="true"></i></a>
+													<figcaption>
+														<a href="#">Продать</a>
+													</figcaption>
+												</figure>
+												<figure>
+													<a href="#"><i class="fa fa-truck" aria-hidden="true"></i></a>
+													<figcaption>
+														<a href="#">Заявка на перевозку</a>
+													</figcaption>
+												</figure>
+											</div>
+										</div>
+									</div>
+								</div>	
 							</div>
-							<div class="product_item col-md-6">
-								<article>
-									<img src="img/garage_img1.jpg" alt="">
-									<section>
-										<h6>Гусеничный экскаватор Wacker Neuson 1404</h6>
-										<p>VIN: HITACHI ZX330LC-5G <br> 2008 год</p>
-										<small class="green">В продаже</small>
-									</section>
-								</article>	
-							</div>
-						</div>
-						<div class="product_block row">
-							<div class="product_item col-md-6">
-								<article>
-									<img src="img/garage_img1.jpg" alt="">
-									<section>
-										<h6>Гусеничный экскаватор Wacker Neuson 1404</h6>
-										<p>VIN: HITACHI ZX330LC-5G <br> 2008 год</p>
-										<small class="grey">На ремонте</small>
-									</section>
-								</article>	
-							</div>
-							<div class="product_item col-md-6">
-								<article>
-									<img src="img/garage_img1.jpg" alt="">
-									<section>
-										<h6>Гусеничный экскаватор Wacker Neuson 1404</h6>
-										<p>VIN: HITACHI ZX330LC-5G <br> 2008 год</p>
-										<small class="green">В продаже</small>
-									</section>
-								</article>	
-							</div>
-						</div>
-						<div class="product_block row">
-							<div class="product_item col-md-6">
-								<article>
-									<img src="img/garage_img1.jpg" alt="">
-									<section>
-										<h6>Гусеничный экскаватор Wacker Neuson 1404</h6>
-										<p>VIN: HITACHI ZX330LC-5G <br> 2008 год</p>
-										<small class="grey">На ремонте</small>
-									</section>
-								</article>	
-							</div>
-						</div>
+						</div>	
 					</div>
-					<div class="product_wrap product_wrap_small">
-						<h5>Экскаваторы колесные</h5>
-						<div class="product_block row">
-							<div class="product_item col-md-6">
-								<article>
-									<img src="img/garage_img2.jpg" alt="">
-									<section>
-										<h6>Гусеничный экскаватор Wacker Neuson 1404</h6>
-										<p>VIN: HITACHI ZX330LC-5G</p>
-										<div class="ovh">
-											<span class="pull-left">2008 год</span>
-											<small class="red pull-right">В аренде</small>
-										</div>
-									</section>
-								</article>	
-							</div>
-							<div class="product_item col-md-6">
-								<article>
-									<img src="img/garage_img2.jpg" alt="">
-									<section>
-										<h6>Гусеничный экскаватор Wacker Neuson 1404</h6>
-										<p>VIN: HITACHI ZX330LC-5G</p>
-										<div class="ovh">
-											<span class="pull-left">2008 год</span>
-											<small class="red pull-right">В аренде</small>
-										</div>
-									</section>
-								</article>	
-							</div>
-						</div>
-						<div class="product_block row">
-							<div class="product_item col-md-6">
-								<article>
-									<img src="img/garage_img2.jpg" alt="">
-									<section>
-										<h6>Гусеничный экскаватор Wacker Neuson 1404</h6>
-										<p>VIN: HITACHI ZX330LC-5G</p>
-										<div class="ovh">
-											<span class="pull-left">2008 год</span>
-											<small class="red pull-right">В аренде</small>
-										</div>
-									</section>
-								</article>	
-							</div>
-							<div class="product_item col-md-6">
-								<article>
-									<img src="img/garage_img2.jpg" alt="">
-									<section>
-										<h6>Гусеничный экскаватор Wacker Neuson 1404</h6>
-										<p>VIN: HITACHI ZX330LC-5G </p>
-										<div class="ovh">
-											<span class="pull-left">2008 год</span>
-											<small class="red pull-right">В аренде</small>
-										</div>
-									</section>
-								</article>	
+					<div class="news_bottom">
+						<ul class="news_list_link">
+							<li><a href="#"><i class="fa fa-question-circle" aria-hidden="true"></i>Запрос по VIN</a></li>
+							<li><a href="#"><i class="fa fa-file-text-o" aria-hidden="true"></i>Блокнот</a></li>
+							<li><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i>Наличие в офисе</a></li>
+							<li><a href="#"><i class="fa fa-database" aria-hidden="true"></i>Журнал расходов</a></li>
+						</ul>
+						<div class="news_wrap row">
+							<div class="col-md-5">
+								<nav class="nav_news">
+									<a href="#" class="active">Новости</a>
+									<a href="#">Анонсы</a>
+									<a href="#">Статьи</a>
+								</nav>
+								<div class="news_block">
+									<article>
+										<strong><a href="#">Заголовок</a></strong>
+										<p>большая в своем классе кабина и транспортировочный вес до 1 500 кг делают экскаватор 1404 Wacker Neuson лучшим в своем классе</p>
+										<small>26 сентября 2016 </small>
+									</article>
+									<article>
+										<strong><a href="#">Заголовок</a></strong>
+										<p>большая в своем классе кабина и транспортировочный вес до 1 500 кг делают экскаватор 1404 Wacker Neuson лучшим в своем классе</p>
+										<small>26 сентября 2016 </small>
+									</article>
+									<article>
+										<strong><a href="#">Заголовок</a></strong>
+										<p>большая в своем классе кабина и транспортировочный вес до 1 500 кг делают экскаватор 1404 Wacker Neuson лучшим в своем классе</p>
+										<small>26 сентября 2016 </small>
+									</article>
+								</div>
 							</div>
 						</div>
-						<div class="product_block row">
-							<div class="product_item col-md-6">
-								<article>
-									<img src="img/garage_img2.jpg" alt="">
-									<section>
-										<h6>Гусеничный экскаватор Wacker Neuson 1404</h6>
-										<p>VIN: HITACHI ZX330LC-5G</p>
-										<div class="ovh">
-											<span class="pull-left">2008 год</span>
-											<small class="red pull-right">В аренде</small>
-										</div>
-									</section>
-								</article>	
-							</div>
-						</div>
-					</div>
+					</div>	
 				</div>
 			</div>
 		</div>
