--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<script src="js/bootstrap.min.js"></script>
 			<script src="js/bootstrap-datepicker.js"></script>
 			<script src="js/locales/bootstrap-datepicker.ru.js" charset="UTF-8"></script>
+			<script src="js/jquery.bxslider.min.js"></script>
 			<script src="js/common.js"></script>
 			<!--[if IE]>  
 				<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>  
