--- a/cabinet.html
+++ b/cabinet.html
@@ -21,6 +21,9 @@
 			<script src="js/jquery.fancybox.pack.js"></script>
 			<script src="js/modernizr.custom.js"></script>
 			<script src="js/bootstrap.min.js"></script>
+			<script src="js/bootstrap-datepicker.js"></script>
+			<script src="js/locales/bootstrap-datepicker.ru.js" charset="UTF-8"></script>
+			<script src="js/jquery.bxslider.min.js"></script>
 			<script src="js/common.js"></script>
 			<!--[if IE]>  
 				<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>  
